--- a/index.html
+++ b/index.html
@@ -4,7 +4,36 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+
+		<!-- CSS -->
+		<link rel="stylesheet" href="style.css" />
+
+		<title>2024 Countdown Timer</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<h1>2024 Countdown Timer</h1>
+			<div class="cd_timer">
+				<div class="cd_container">
+					<div class="time day">100</div>
+					<span class="time_text">Days</span>
+				</div>
+				<div class="cd_container">
+					<div class="time hour">50</div>
+					<span class="time_text">Hours</span>
+				</div>
+				<div class="cd_container">
+					<div class="time minute">30</div>
+					<span class="time_text">Minutes</span>
+				</div>
+				<div class="cd_container">
+					<div class="time second">30</div>
+					<span class="time_text">Seconds</span>
+				</div>
+			</div>
+		</div>
+
+		<!-- Javascript -->
+		<script src="script.js"></script>
+	</body>
 </html>
