--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 		<!-- CSS -->
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="styles/styles.css" />
 
 		<title>2024 Countdown Timer</title>
 	</head>
